--- a/yelppack/Dockerfile
+++ b/yelppack/Dockerfile
@@ -1,18 +1,19 @@
-FROM docker-dev.yelpcorp.com/lucid_yelp
+FROM docker-dev.yelpcorp.com/trusty_yelp
 MAINTAINER Tomas Doran <bobtfish@bobtfish.net>
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -yq \
-    go \
+    wget \
     git \
     build-essential \
-    ruby1.8 rubygems \
-    libopenssl-ruby \
-    ruby-dev \
+    ruby1.9.1 rubygems1.9.1 \
+    libopenssl-ruby1.9.1 \
+    ruby1.9.1-dev \
     --no-install-recommends
 
+RUN wget https://storage.googleapis.com/golang/go1.6.linux-amd64.tar.gz && tar xzf go1.6.linux-amd64.tar.gz && mv go /usr/local
+ENV PATH /usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/usr/local/sbin:/usr/local/go/bin:/go/bin
 ENV GOPATH /go
-
-RUN gem install fpm --version 1.3.3
-RUN ln -s /var/lib/gems/1.8/bin/fpm /usr/local/bin/fpm
+RUN mkdir /go
+RUN gem install fpm
 
 #WORKDIR /go/src/github.com/Yelp/terraform-provider-gitfile
