--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ on:
 env:
   PKG_NAME: "terraform"
 
+permissions:
+  contents: read
+  statuses: write
+
 jobs:
   get-product-version:
     name: "Determine intended Terraform version"
