--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,8 +166,8 @@ jobs:
           - {goos: "solaris", goarch: "amd64", runson: "ubuntu-latest"}
           - {goos: "windows", goarch: "386", runson: "ubuntu-latest"}
           - {goos: "windows", goarch: "amd64", runson: "ubuntu-latest"}
-          - {goos: "darwin", goarch: "amd64", runson: "macos-latest"}
-          - {goos: "darwin", goarch: "arm64", runson: "macos-latest"}
+          - {goos: "darwin", goarch: "amd64", runson: "ubuntu-latest"}
+          - {goos: "darwin", goarch: "arm64", runson: "ubuntu-latest"}
       fail-fast: false
 
     env:
@@ -218,324 +218,64 @@ jobs:
           name: ${{ env.PKG_NAME }}_${{ env.FULL_VERSION }}_${{ matrix.goos }}_${{ matrix.goarch }}.zip
           path: out/${{ env.PKG_NAME }}_${{ env.FULL_VERSION }}_${{ matrix.goos }}_${{ matrix.goarch }}.zip
 
-  package-linux:
-    name: "Build Linux distro packages for ${{ matrix.arch }}"
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-      - build
-    strategy:
-      matrix:
-        include:
-          - {arch: "386"}
-          - {arch: "amd64"}
-          - {arch: "arm"}
-          - {arch: "arm64"}
-      fail-fast: false
+#  package-linux:
+#    name: "Build Linux distro packages for ${{ matrix.arch }}"
+#    runs-on: ubuntu-latest
+#    needs:
+#      - get-product-version
+#      - build
+#    strategy:
+#      matrix:
+#        include:
+#          - {arch: "386"}
+#          - {arch: "amd64"}
+#          - {arch: "arm"}
+#          - {arch: "arm64"}
+#      fail-fast: false
+#
+#    env:
+#      os: linux
+#      arch: ${{matrix.arch}}
+#      version: ${{needs.get-product-version.outputs.product-version}}
+#
+#    steps:
+#      - name: "Download Terraform CLI package"
+#        uses: actions/download-artifact@v2
+#        id: clipkg
+#        with:
+#          name: terraform_${{ env.version }}_${{ env.os }}_${{ env.arch }}.zip
+#          path: .
+#      - name: Extract packages
+#        run: |
+#          mkdir -p dist
+#          (cd dist && unzip "../terraform_${{ env.version }}_${{ env.os }}_${{ env.arch }}.zip")
+#          mkdir -p out
+#      - name: Build Linux distribution packages
+#        uses: hashicorp/actions-packaging-linux@v1
+#        with:
+#          name: "terraform"
+#          description: "Terraform enables you to safely and predictably create, change, and improve infrastructure. It is an open source tool that codifies APIs into declarative configuration files that can be shared amongst team members, treated as code, edited, reviewed, and versioned."
+#          arch: ${{ matrix.arch }}
+#          version: ${{ env.version }}
+#          maintainer: "HashiCorp"
+#          homepage: "https://terraform.io/"
+#          license: "MPL-2.0"
+#          binary: "dist/terraform"
+#          deb_depends: "git"
+#          rpm_depends: "git"
+#      - name: Gather Linux distribution package filenames
+#        run: |
+#          echo "RPM_PACKAGE=$(basename out/*.rpm)" >> $GITHUB_ENV
+#          echo "DEB_PACKAGE=$(basename out/*.deb)" >> $GITHUB_ENV
+#      - name: "Save .rpm package"
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: ${{ env.RPM_PACKAGE }}
+#          path: out/${{ env.RPM_PACKAGE }}
+#      - name: "Save .deb package"
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: ${{ env.DEB_PACKAGE }}
+#          path: out/${{ env.DEB_PACKAGE }}
 
-    env:
-      os: linux
-      arch: ${{matrix.arch}}
-      version: ${{needs.get-product-version.outputs.product-version}}
 
-    steps:
-      - name: "Download Terraform CLI package"
-        uses: actions/download-artifact@v2
-        id: clipkg
-        with:
-          name: terraform_${{ env.version }}_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: Extract packages
-        run: |
-          mkdir -p dist
-          (cd dist && unzip "../terraform_${{ env.version }}_${{ env.os }}_${{ env.arch }}.zip")
-          mkdir -p out
-      - name: Build Linux distribution packages
-        uses: hashicorp/actions-packaging-linux@v1
-        with:
-          name: "terraform"
-          description: "Terraform enables you to safely and predictably create, change, and improve infrastructure. It is an open source tool that codifies APIs into declarative configuration files that can be shared amongst team members, treated as code, edited, reviewed, and versioned."
-          arch: ${{ matrix.arch }}
-          version: ${{ env.version }}
-          maintainer: "HashiCorp"
-          homepage: "https://terraform.io/"
-          license: "MPL-2.0"
-          binary: "dist/terraform"
-          deb_depends: "git"
-          rpm_depends: "git"
-      - name: Gather Linux distribution package filenames
-        run: |
-          echo "RPM_PACKAGE=$(basename out/*.rpm)" >> $GITHUB_ENV
-          echo "DEB_PACKAGE=$(basename out/*.deb)" >> $GITHUB_ENV
-      - name: "Save .rpm package"
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.RPM_PACKAGE }}
-          path: out/${{ env.RPM_PACKAGE }}
-      - name: "Save .deb package"
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.DEB_PACKAGE }}
-          path: out/${{ env.DEB_PACKAGE }}
-
-  # TODO: homebrew packages for macOS
-  #package-homebrew:
-  #  name: Build Homebrew package for darwin_${{ matrix.arch }}
-  #  runs-on: macos-latest
-  #  needs:
-  #    - get-product-version
-  #    - build
-  #  strategy:
-  #    matrix:
-  #      arch: ["amd64", "arm64"]
-  #    fail-fast: false
-  # ...
-
-  package-docker:
-    name: Build Docker image for linux_${{ matrix.arch }}
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-      - build
-    strategy:
-      matrix:
-        arch: ["amd64"]
-      fail-fast: false
-
-    env:
-      repo: "terraform"
-      version: ${{needs.get-product-version.outputs.product-version}}
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Docker images
-        uses: hashicorp/actions-docker-build@v1
-        with:
-          pkg_name: "terraform_${{env.version}}"
-          version: ${{env.version}}
-          bin_name: terraform
-          target: default
-          arch: ${{matrix.arch}}
-          dockerfile: .github/workflows/build-Dockerfile
-          tags: |
-            docker.io/hashicorp/${{env.repo}}:${{env.version}}
-            986891699432.dkr.ecr.us-east-1.amazonaws.com/hashicorp/${{env.repo}}:${{env.version}}
-
-  e2etest-build:
-    name: Build e2etest for ${{ matrix.goos }}_${{ matrix.goarch }}
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-      - get-go-version
-    strategy:
-      matrix:
-        # We build test harnesses only for the v1.0 Compatibility Promises
-        # supported platforms. Even within that set, we can only run on
-        # architectures for which we have GitHub Actions runners available,
-        # which is currently only amd64 (x64).
-        # TODO: GitHub Actions does support _self-hosted_ arm and arm64
-        # runners, so we could potentially run some ourselves to run our
-        # tests there, but at the time of writing there is no documented
-        # support for darwin_arm64 (macOS on Apple Silicon).
-        include:
-          - {goos: "darwin", goarch: "amd64"}
-          #- {goos: "darwin", goarch: "arm64"}
-          - {goos: "windows", goarch: "amd64"}
-          - {goos: "linux", goarch: "amd64"}
-          #- {goos: "linux", goarch: "arm"}
-          #- {goos: "linux", goarch: "arm64"}
-      fail-fast: false
-
-    env:
-      build_script: ./internal/command/e2etest/make-archive.sh
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Go toolchain
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ needs.get-go-version.outputs.go-version }}
-
-      - name: Build test harness package
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-          GO_LDFLAGS: ${{ needs.get-product-version.outputs.go-ldflags }}
-        run: |
-          # NOTE: This script reacts to the GOOS, GOARCH, and GO_LDFLAGS
-          # environment variables defined above. The e2e test harness
-          # needs to know the version we're building for so it can verify
-          # that "terraform version" is returning that version number.
-          bash ./internal/command/e2etest/make-archive.sh
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: terraform-e2etest_${{ matrix.goos }}_${{ matrix.goarch }}.zip
-          path: internal/command/e2etest/build/terraform-e2etest_${{ matrix.goos }}_${{ matrix.goarch }}.zip
-          if-no-files-found: error
-
-  e2etest-linux:
-    name: e2etest for linux_${{ matrix.goarch }}
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-      - build
-      - e2etest-build
-    strategy:
-      matrix:
-        include:
-          - {goarch: "amd64"}
-          #- {goarch: "arm64"}
-          #- {goarch: "arm"}
-      fail-fast: false
-
-    env:
-      os: linux
-      arch: ${{ matrix.goarch }}
-      version: ${{needs.get-product-version.outputs.product-version}}
-
-    steps:
-      # NOTE: This intentionally _does not_ check out the source code
-      # for the commit/tag we're building, because by now we should
-      # have everything we need in the combination of CLI release package
-      # and e2etest package for this platform. (This helps ensure that we're
-      # really testing the release package and not inadvertently testing a
-      # fresh build from source.)
-      - name: "Download e2etest package"
-        uses: actions/download-artifact@v2
-        id: e2etestpkg
-        with:
-          name: terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: "Download Terraform CLI package"
-        uses: actions/download-artifact@v2
-        id: clipkg
-        with:
-          name: terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: Extract packages
-        run: |
-          unzip "./terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
-          unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
-      - name: Run E2E Tests
-        run: |
-          TF_ACC=1 ./e2etest -test.v
-
-  e2etest-darwin:
-    name: e2etest for darwin_${{ matrix.goarch }}
-    runs-on: macos-latest
-    needs:
-      - get-product-version
-      - build
-      - e2etest-build
-    strategy:
-      matrix:
-        include:
-          - {goarch: "amd64"}
-          #- {goarch: "arm64"}
-      fail-fast: false
-
-    env:
-      os: darwin
-      arch: ${{ matrix.goarch }}
-      version: ${{needs.get-product-version.outputs.product-version}}
-
-    steps:
-      # NOTE: This intentionally _does not_ check out the source code
-      # for the commit/tag we're building, because by now we should
-      # have everything we need in the combination of CLI release package
-      # and e2etest package for this platform. (This helps ensure that we're
-      # really testing the release package and not inadvertently testing a
-      # fresh build from source.)
-      - name: "Download e2etest package"
-        uses: actions/download-artifact@v2
-        id: e2etestpkg
-        with:
-          name: terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: "Download Terraform CLI package"
-        uses: actions/download-artifact@v2
-        id: clipkg
-        with:
-          name: terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: Extract packages
-        run: |
-          unzip "./terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
-          unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
-      - name: Run E2E Tests
-        run: |
-          TF_ACC=1 ./e2etest -test.v
-
-  e2etest-windows:
-    name: e2etest for windows_${{ matrix.goarch }}
-    runs-on: windows-latest
-    needs:
-      - get-product-version
-      - build
-      - e2etest-build
-    strategy:
-      matrix:
-        include:
-          - {goarch: "amd64"}
-      fail-fast: false
-
-    env:
-      os: windows
-      arch: ${{ matrix.goarch }}
-      version: ${{needs.get-product-version.outputs.product-version}}
-
-    steps:
-      # NOTE: This intentionally _does not_ check out the source code
-      # for the commit/tag we're building, because by now we should
-      # have everything we need in the combination of CLI release package
-      # and e2etest package for this platform. (This helps ensure that we're
-      # really testing the release package and not inadvertently testing a
-      # fresh build from source.)
-      - name: "Download e2etest package"
-        uses: actions/download-artifact@v2
-        id: e2etestpkg
-        with:
-          name: terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: "Download Terraform CLI package"
-        uses: actions/download-artifact@v2
-        id: clipkg
-        with:
-          name: terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip
-          path: .
-      - name: Extract packages
-        shell: pwsh
-        run: |
-          Expand-Archive -LiteralPath 'terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip' -DestinationPath '.'
-          Expand-Archive -LiteralPath 'terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip' -DestinationPath '.'
-      - name: Run E2E Tests
-        env:
-          TF_ACC: 1
-        shell: cmd
-        run: |
-          e2etest.exe -test.v
-
-  docs-source-package:
-    name: "Build documentation bundle"
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-
-    env:
-      version: ${{needs.get-product-version.outputs.product-version}}
-
-    steps:
-      - uses: actions/checkout@v2
-      # FIXME: We should include some sort of pre-validation step here, to
-      # confirm that the doc content is mechanically valid so that the
-      # publishing pipeline will be able to render all content without errors.
-      - name: "Create documentation source bundle"
-        run: |
-          (cd website && zip -9 -r ../terraform-cli-docs-source_${{ env.version }}.zip .)
-      - uses: actions/upload-artifact@v2
-        with:
-          name: terraform-cli-docs-source_${{ env.version }}.zip
-          path: terraform-cli-docs-source_${{ env.version }}.zip
-          if-no-files-found: error
