--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -180,7 +180,7 @@ jobs:
 
       - name: "Code consistency checks"
         run: |
-          make fmtcheck generate staticcheck exhaustive protobuf
+          make fmtcheck vetcheck generate staticcheck exhaustive protobuf
           if [[ -n "$(git status --porcelain)" ]]; then
             echo >&2 "ERROR: Generated files are inconsistent. Run 'make generate' and 'make protobuf' locally and then commit the updated files."
             git >&2 status --porcelain
