--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
     types:
       - closed
     
+permissions:
+  contents: read
+
 jobs:
   backport:
     if: github.event.pull_request.merged
