Adding arm64 for the container image build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,7 +299,7 @@ jobs:
       - build
     strategy:
       matrix:
-        arch: ["amd64"]
+        arch: ["amd64", "arm64"]
       fail-fast: false
 
     env:
