--- a/.github/workflows/merged-pr.yml
+++ b/.github/workflows/merged-pr.yml
@@ -13,6 +13,9 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - name: Create annotation for build error
+        run: echo "lllll"
+           
       - uses: actions/github-script@v5
         with:
           script: |
