Migrate set-output to GITHUB_OUTPUT
Signed-off-by: Scott Macfarlane <smacfarlane@hashicorp.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,10 +61,9 @@ jobs:
           git log --tags --simplify-by-decoration --decorate-refs='refs/tags/v*' --pretty=format:'%h %<|(35)%S %ci' --max-count 15 --topo-order
           set -e
           RAW_VERSION=$(git describe --tags --match='v*' ${GITHUB_SHA})
-          echo "
-          
-          Raw version is ${RAW_VERSION}"
-          echo "::set-output name=raw-version::${RAW_VERSION}"
+
+          echo "raw-version=${RAW_VERSION}" | tee -a "${GITHUB_OUTPUT}"
+
       - name: Decide version number
         id: get-product-version
         shell: bash
@@ -102,11 +101,12 @@ jobs:
           if [[ "$EXPERIMENTS_ENABLED" == 1 ]]; then
             echo "This build allows use of experimental features"
           fi
-          echo "::set-output name=product-version::${VERSION}"
-          echo "::set-output name=product-version-base::${BASE_VERSION}"
-          echo "::set-output name=product-version-pre::${PRERELEASE}"
-          echo "::set-output name=experiments::${EXPERIMENTS_ENABLED}"
-          echo "::set-output name=go-ldflags::${LDFLAGS}"
+          echo "product-version=${VERSION}" | tee -a "${GITHUB_OUTPUT}"
+          echo "product-version-base=${BASE_VERSION}" | tee -a "${GITHUB_OUTPUT}"
+          echo "product-version-pre=${PRERELEASE}" | tee -a "${GITHUB_OUTPUT}"
+          echo "experiments=${EXPERIMENTS_ENABLED}" | tee -a "${GITHUB_OUTPUT}"
+          echo "go-ldflags=${LDFLAGS}" | tee -a "${GITHUB_OUTPUT}"
+
       - name: Report chosen version number
         run: |
           [ -n "${{steps.get-product-version.outputs.product-version}}" ]
