Add current branch to auto-build binaries

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
       - main
       - 'v[0-9]+.[0-9]+'
       - build-workflow-dev/*
+      - releng/*
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
