Fix darwin e2e builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -217,7 +217,7 @@ jobs:
       matrix:
         include:
           - { runson: ubuntu-latest, goos: linux, goarch: "amd64" }
-          - { runson: macos-latest, goos: macos, goarch: "amd64" }
+          - { runson: macos-latest, goos: darwin, goarch: "amd64" }
           - { runson: windows-latest, goos: windows, goarch: "amd64" }
       fail-fast: false
 
