Enable all product builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,20 +108,20 @@ jobs:
     strategy:
       matrix:
         include:
-#          - {goos: "freebsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "freebsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "freebsd", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "linux", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "freebsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "freebsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "freebsd", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "linux", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
           - {goos: "linux", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "linux", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "linux", goarch: "arm64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "openbsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "openbsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "solaris", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "windows", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "windows", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-#          - {goos: "darwin", goarch: "amd64", runson: "macos-latest", cgo-enabled: "1"}
-#          - {goos: "darwin", goarch: "arm64", runson: "macos-latest", cgo-enabled: "1"}
+          - {goos: "linux", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "linux", goarch: "arm64", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "openbsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "openbsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "solaris", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "windows", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "windows", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+          - {goos: "darwin", goarch: "amd64", runson: "macos-latest", cgo-enabled: "1"}
+          - {goos: "darwin", goarch: "arm64", runson: "macos-latest", cgo-enabled: "1"}
       fail-fast: false
 
   package-docker:
@@ -132,7 +132,7 @@ jobs:
       - build
     strategy:
       matrix:
-        arch: ["amd64"] #, "386", "arm", "arm64"]
+        arch: ["amd64", "386", "arm", "arm64"]
       fail-fast: false
     env:
       repo: "terraform"
@@ -163,21 +163,15 @@ jobs:
       - get-go-version
     strategy:
       matrix:
-        # We build test harnesses only for the v1.0 Compatibility Promises
-        # supported platforms. Even within that set, we can only run on
-        # architectures for which we have GitHub Actions runners available,
-        # which is currently only amd64 (x64).
-        # TODO: GitHub Actions does support _self-hosted_ arm and arm64
-        # runners, so we could potentially run some ourselves to run our
-        # tests there, but at the time of writing there is no documented
-        # support for darwin_arm64 (macOS on Apple Silicon).
         include:
-#          - {goos: "darwin", goarch: "amd64"}
-#          #- {goos: "darwin", goarch: "arm64"}
-#          - {goos: "windows", goarch: "amd64"}
+          - {goos: "darwin", goarch: "amd64"}
+          - {goos: "darwin", goarch: "arm64"}
+          - {goos: "windows", goarch: "amd64"}
+          - {goos: "windows", goarch: "386"}
+          - {goos: "linux", goarch: "386"}
           - {goos: "linux", goarch: "amd64"}
-          #- {goos: "linux", goarch: "arm"}
-          #- {goos: "linux", goarch: "arm64"}
+          - {goos: "linux", goarch: "arm"}
+          - {goos: "linux", goarch: "arm64"}
       fail-fast: false
 
     env:
@@ -227,8 +221,13 @@ jobs:
       matrix:
         include:
           - { runson: ubuntu-latest, goos: linux, goarch: "amd64" }
-#          - { runson: macos-latest, goos: darwin, goarch: "amd64" }
-#          - { runson: windows-latest, goos: windows, goarch: "amd64" }
+          - { runson: ubuntu-latest, goos: linux, goarch: "arm" }
+          - { runson: ubuntu-latest, goos: linux, goarch: "arm64" }
+          - { runson: ubuntu-latest, goos: linux, goarch: "386" }
+          - { runson: macos-latest, goos: darwin, goarch: "amd64" }
+          - { runson: macos-latest, goos: darwin, goarch: "arm64" }
+          - { runson: windows-latest, goos: windows, goarch: "amd64" }
+          - { runson: windows-latest, goos: windows, goarch: "386" }
       fail-fast: false
 
     env:
