--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,49 +108,49 @@ jobs:
     strategy:
       matrix:
         include:
-          - {goos: "freebsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "freebsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "freebsd", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "linux", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "linux", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "freebsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "freebsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "freebsd", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "linux", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "linux", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
           - {goos: "linux", goarch: "arm", runson: "ubuntu-latest", cgo-enabled: "0"}
           - {goos: "linux", goarch: "arm64", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "openbsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "openbsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "solaris", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "windows", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "windows", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
-          - {goos: "darwin", goarch: "amd64", runson: "macos-latest", cgo-enabled: "1"}
-          - {goos: "darwin", goarch: "arm64", runson: "macos-latest", cgo-enabled: "1"}
+#          - {goos: "openbsd", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "openbsd", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "solaris", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "windows", goarch: "386", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "windows", goarch: "amd64", runson: "ubuntu-latest", cgo-enabled: "0"}
+#          - {goos: "darwin", goarch: "amd64", runson: "macos-latest", cgo-enabled: "1"}
+#          - {goos: "darwin", goarch: "arm64", runson: "macos-latest", cgo-enabled: "1"}
       fail-fast: false
 
-  package-docker:
-    name: Build Docker image for linux_${{ matrix.arch }}
-    runs-on: ubuntu-latest
-    needs:
-      - get-product-version
-      - build
-    strategy:
-      matrix:
-        arch: ["amd64", "386", "arm", "arm64"]
-      fail-fast: false
-    env:
-      repo: "terraform"
-      version: ${{needs.get-product-version.outputs.product-version}}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Docker images
-        uses: hashicorp/actions-docker-build@v1
-        with:
-          pkg_name: "terraform_${{env.version}}"
-          version: ${{env.version}}
-          bin_name: terraform
-          target: default
-          arch: ${{matrix.arch}}
-          dockerfile: .github/workflows/build-Dockerfile
-          tags: |
-            docker.io/hashicorp/${{env.repo}}:${{env.version}}
-            986891699432.dkr.ecr.us-east-1.amazonaws.com/hashicorp/${{env.repo}}:${{env.version}}
+#  package-docker:
+#    name: Build Docker image for linux_${{ matrix.arch }}
+#    runs-on: ubuntu-latest
+#    needs:
+#      - get-product-version
+#      - build
+#    strategy:
+#      matrix:
+#        arch: ["amd64", "386", "arm", "arm64"]
+#      fail-fast: false
+#    env:
+#      repo: "terraform"
+#      version: ${{needs.get-product-version.outputs.product-version}}
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Build Docker images
+#        uses: hashicorp/actions-docker-build@v1
+#        with:
+#          pkg_name: "terraform_${{env.version}}"
+#          version: ${{env.version}}
+#          bin_name: terraform
+#          target: default
+#          arch: ${{matrix.arch}}
+#          dockerfile: .github/workflows/build-Dockerfile
+#          tags: |
+#            docker.io/hashicorp/${{env.repo}}:${{env.version}}
+#            986891699432.dkr.ecr.us-east-1.amazonaws.com/hashicorp/${{env.repo}}:${{env.version}}
 
   e2etest-build:
     name: Build e2etest for ${{ matrix.goos }}_${{ matrix.goarch }}
@@ -164,12 +164,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - {goos: "darwin", goarch: "amd64"}
-          - {goos: "darwin", goarch: "arm64"}
-          - {goos: "windows", goarch: "amd64"}
-          - {goos: "windows", goarch: "386"}
-          - {goos: "linux", goarch: "386"}
-          - {goos: "linux", goarch: "amd64"}
+#          - {goos: "darwin", goarch: "amd64"}
+#          - {goos: "darwin", goarch: "arm64"}
+#          - {goos: "windows", goarch: "amd64"}
+#          - {goos: "windows", goarch: "386"}
+          - { goos: "linux", goarch: "arm" }
+          - { goos: "linux", goarch: "arm64" }
+#          - {goos: "linux", goarch: "386"}
+#          - {goos: "linux", goarch: "amd64"}
       fail-fast: false
 
     env:
@@ -207,10 +209,77 @@ jobs:
         with:
           path: ${{ steps.set-cache-values.outputs.e2e-cache-path }}
           key: ${{ steps.set-cache-values.outputs.e2e-cache-key }}_${{ matrix.goos }}_${{ matrix.goarch }}
+#
+#  e2etest:
+#    name: Run e2etest for ${{ matrix.goos }}_${{ matrix.goarch }}
+#    runs-on: ${{ matrix.runson }}
+#    needs:
+#      - get-product-version
+#      - build
+#      - e2etest-build
+#    strategy:
+#      matrix:
+#        include:
+#          - { runson: ubuntu-latest, goos: linux, goarch: "amd64" }
+#          - { runson: ubuntu-latest, goos: linux, goarch: "386" }
+#          - { runson: macos-latest, goos: darwin, goarch: "amd64" }
+#          - { runson: macos-latest, goos: darwin, goarch: "arm64" }
+#          - { runson: windows-latest, goos: windows, goarch: "amd64" }
+#          - { runson: windows-latest, goos: windows, goarch: "386" }
+#      fail-fast: false
+#
+#    env:
+#      os: ${{ matrix.goos }}
+#      arch: ${{ matrix.goarch }}
+#      version: ${{needs.get-product-version.outputs.product-version}}
+#
+#    steps:
+#      # NOTE: This intentionally _does not_ check out the source code
+#      # for the commit/tag we're building, because by now we should
+#      # have everything we need in the combination of CLI release package
+#      # and e2etest package for this platform. (This helps ensure that we're
+#      # really testing the release package and not inadvertently testing a
+#      # fresh build from source.)
+#      - name: "Restore cache"
+#        uses: actions/cache/restore@v3
+#        id: e2etestpkg
+#        with:
+#          path: ${{ needs.e2etest-build.outputs.e2e-cache-path }}
+#          key: ${{ needs.e2etest-build.outputs.e2e-cache-key }}_${{ matrix.goos }}_${{ matrix.goarch }}
+#          fail-on-cache-miss: true
+#          enableCrossOsArchive: true
+#      - name: "Download Terraform CLI package"
+#        uses: actions/download-artifact@v2
+#        id: clipkg
+#        with:
+#          name: terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip
+#          path: .
+#      - name: Extract packages
+#        if: ${{ (matrix.goos == 'linux') || (inputs.goos == 'darwin') }}
+#        run: |
+#          unzip "${{ needs.e2etest-build.outputs.e2e-cache-path }}/terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
+#          unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
+#      - name: Extract packages windows
+#        if: ${{ matrix.goos == 'windows' }}
+#        run: |
+#          unzip "${{ needs.e2etest-build.outputs.e2e-cache-path }}/terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
+#          unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
+#      - name: Run E2E Tests
+#        if: ${{ (matrix.goos == 'linux') || (inputs.goos == 'darwin') }}
+#        run: |
+#          TF_ACC=1 ./e2etest -test.v
+#      - name: Run E2E Tests
+#        if: ${{ matrix.goos == 'windows' }}
+#        env:
+#          TF_ACC: 1
+#        shell: cmd
+#        run: |
+#          e2etest.exe -test.v
 
-  e2etest:
+  e2etest-arm:
     name: Run e2etest for ${{ matrix.goos }}_${{ matrix.goarch }}
-    runs-on: ${{ matrix.runson }}
+    runs-on: ubuntu-latest
+    container: arm64v8/alpine
     needs:
       - get-product-version
       - build
@@ -218,12 +287,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - { runson: ubuntu-latest, goos: linux, goarch: "amd64" }
-          - { runson: ubuntu-latest, goos: linux, goarch: "386" }
-          - { runson: macos-latest, goos: darwin, goarch: "amd64" }
-          - { runson: macos-latest, goos: darwin, goarch: "arm64" }
-          - { runson: windows-latest, goos: windows, goarch: "amd64" }
-          - { runson: windows-latest, goos: windows, goarch: "386" }
+          - { goos: linux, goarch: "arm" }
+          - { goos: linux, goarch: "arm64" }
       fail-fast: false
 
     env:
@@ -253,12 +318,6 @@ jobs:
           name: terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip
           path: .
       - name: Extract packages
-        if: ${{ (matrix.goos == 'linux') || (inputs.goos == 'darwin') }}
-        run: |
-          unzip "${{ needs.e2etest-build.outputs.e2e-cache-path }}/terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
-          unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
-      - name: Extract packages windows
-        if: ${{ matrix.goos == 'windows' }}
         run: |
           unzip "${{ needs.e2etest-build.outputs.e2e-cache-path }}/terraform-e2etest_${{ env.os }}_${{ env.arch }}.zip"
           unzip "./terraform_${{env.version}}_${{ env.os }}_${{ env.arch }}.zip"
@@ -266,10 +325,3 @@ jobs:
         if: ${{ (matrix.goos == 'linux') || (inputs.goos == 'darwin') }}
         run: |
           TF_ACC=1 ./e2etest -test.v
-      - name: Run E2E Tests
-        if: ${{ matrix.goos == 'windows' }}
-        env:
-          TF_ACC: 1
-        shell: cmd
-        run: |
-          e2etest.exe -test.v
