--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,9 +212,4 @@ jobs:
           platforms: all
       - name: Run E2E Tests
         run: |
-          docker run \
-          --platform=linux/arm64 \
-          -v $(pwd) \
-          -w $(pwd)
-          arm64v8/alpine:latest \
-          TF_ACC=1 ./e2etest -test.v
+          docker run --platform=linux/arm64 -v $(pwd) -w $(pwd) arm64v8/alpine:latest TF_ACC=1 ./e2etest -test.v
