--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,4 +212,4 @@ jobs:
           platforms: all
       - name: Run E2E Tests
         run: |
-          docker run --platform=linux/arm64 -v $(pwd):$(pwd) arm64v8/alpine ls
+          docker run --platform=linux/arm64 -v $(pwd):e2etest -w e2etest arm64v8/alpine export TF_ACC=1 && ./e2etest -test.v
